POC of multisig support for Ledger wallets

--- a/src/cryptoadvance/specter/templates/includes/address-data.html
+++ b/src/cryptoadvance/specter/templates/includes/address-data.html
@@ -35,6 +35,7 @@
             this.info = clone.querySelector(".address-data-info");
             this.isVerifyQR = this.getAttribute('data-verify-qr') == 'True';
             this.isVerifyHwi = this.getAttribute('data-verify-hwi') == 'True';
+            this.supportsPolicyRegistration = this.getAttribute('data-supports-policy-registration') == 'True';
             this.used = (this.getAttribute('data-used') == 'true');
             this.utxo = this.getAttribute('data-utxo');
             this.amount = this.getAttribute('data-amount');
