--- a/src/cryptoadvance/specter/templates/includes/overlay/sign_tx_method.jinja
+++ b/src/cryptoadvance/specter/templates/includes/overlay/sign_tx_method.jinja
@@ -30,7 +30,42 @@
                         {% endfor %}
                     {% endfor %}
 
-                    signTx(combine, '{{ device.device_type }}', '{{ device_psbts["hwi"] }}', fingerprint);
+
+                    let hmac_by_fingerprint = new Map();
+                    let policy_name_by_fingerprint = new Map();
+                    let policymap_by_fingerprint = new Map();
+                    let keysinfo_by_fingerprint = new Map();
+                    {% for device in wallet.devices %}
+                        {% for fpr, hmac in wallet.hmac.items() %}
+                            hmac_by_fingerprint.set('{{ fpr }}', '{{ wallet.hmac[fpr] }}');
+                            policy_name_by_fingerprint.set('{{ fpr }}', '{{ wallet.policy[fpr].name }}');
+                            policymap_by_fingerprint.set('{{ fpr }}', '{{ wallet.policy[fpr].policy_map }}');
+                            keysinfo_by_fingerprint.set('{{ fpr }}', '{{ wallet.policy[fpr].keys_info }}');
+                        {% endfor %}
+                    {% endfor %}
+
+
+                    function htmlDecode(input) {
+                        var doc = new DOMParser().parseFromString(input, "text/html");
+                        return doc.documentElement.textContent;
+                    }
+
+                    let hmac, wallet_name, policy_map, keys_info;
+                    if (!hmac_by_fingerprint.has(fingerprint)) {
+                        hmac = "";
+                        wallet_name = "";
+                        policy_map = "";
+                        keys_info = [];
+                    } else {
+                        hmac = hmac_by_fingerprint.get(fingerprint);
+                        wallet_name = policy_name_by_fingerprint.get(fingerprint);
+                        policy_map = policymap_by_fingerprint.get(fingerprint);
+
+                        // TODO: this is most certainly bad, don't do this
+                        keys_info = JSON.parse(htmlDecode(keysinfo_by_fingerprint.get(fingerprint)));
+                    }
+
+                    signTx(combine, '{{ device.device_type }}', '{{ device_psbts["hwi"] }}', fingerprint, hmac, wallet_name, policy_map, keys_info);
                 });
             </script>
         {% endif %}
